[tool.poetry]
name = "GoogleDriveDownloader"
version = "0.1.0"
description = ""
authors = ["loganstartoni <logan@startoni.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
google-api-python-client = "^2.108.0"
google-auth-httplib2 = "^0.1.1"
google-auth-oauthlib = "^1.1.0"

[tool.poetry.group.docs]
optional=true

[tool.poetry.group.docs.dependencies]
mkdocs-material = "^9.4.14"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
